--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/forms": "^21.0.0-rc.0",
     "@angular/platform-browser": "^21.0.0-rc.0",
     "@angular/router": "^21.0.0-rc.0",
+    "bootstrap": "^5.3.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
